--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,9 +6,9 @@ name: Node & NEXT CI
 # 触发workflow的条件
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
