--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "contentlayer dev & next dev",
+    "build": "contentlayer build & next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "contentlayer": "^0.3.3",
     "date-fns": "^3.6.0",
-    "next": "13.5.6",
+    "next": "13.3.0",
     "next-contentlayer": "^0.3.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype-pretty-code": "^0.14.0",
+    "remark-flexible-code-titles": "^1.2.0",
+    "remark-gfm": "^3.0.0",
+    "shiki": "^1.16.1",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,6 +31,7 @@
     "eslint-config-next": "13.3.0",
     "postcss": "^8.4.40",
     "sass": "^1.77.8",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
