--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.3",
-    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "next": "13.3.0",
     "next-contentlayer": "^0.3.3",
     "react": "^18",
