--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.3",
     "dayjs": "^1.11.13",
