--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,9 +6,7 @@ name: Node & NEXT CI
 # 触发workflow的条件
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches: ["main"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -22,10 +20,8 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-    
 jobs:
   Build-Branch:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -34,42 +30,41 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@master
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-     #缓存依赖
-    - name: Cache nodemodules
-      uses: actions/cache@v1
-      env:
+      - uses: actions/checkout@master
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+        #缓存依赖
+      - name: Cache nodemodules
+        uses: actions/cache@v1
+        env:
           cache-name: cache-node-modules
-      with:
+        with:
           # 需要缓存的文件的路径
-          path: ./node_modules 
+          path: ./node_modules
           # 对缓存的文件指定的唯一标识
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./package.json') }} 
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./package.json') }}
           # 用于没有再找目标key的缓存的backup选项
           restore-keys: |
-              ${{ runner.os }}-build-${{ env.cache-name }}-
-              ${{ runner.os }}-build-
-              ${{ runner.os }}-
-    # 装依赖
-    - name: Install
-      run: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      # 装依赖
+      - name: Install
+        run: |
           npm install -g yarn@1.22.19
           yarn install
-    # 打包
-    - name: Build
-      run: |
+      # 打包
+      - name: Build
+        run: |
           yarn build
           touch ./out/.nojekyll
-    # 部署
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v4
-      with:
-        token: ${{ secrets.TOKEN }}
-        branch: gh-pages
-        folder: out  # npm run build 生成静态资源的路径
-
+      # 部署
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v4
+        with:
+          token: ${{ secrets.TOKEN }}
+          branch: gh-pages
+          folder: out # npm run build 生成静态资源的路径
 
