--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "contentlayer dev & next dev",
     "build": "contentlayer build & next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
