--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,7 +6,7 @@ name: Node & NEXT CI
 # 触发workflow的条件
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -42,29 +42,48 @@ jobs:
           cache-name: cache-node-modules
         with:
           # 需要缓存的文件的路径
-          path: ./node_modules
+          path: |
+            ./node_modules
+            .next/cache
           # 对缓存的文件指定的唯一标识
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./package.json') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # 用于没有再找目标key的缓存的backup选项
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+
       # 装依赖
       - name: Install
         run: |
           npm install -g yarn@1.22.19
           yarn install
+
       # 打包
       - name: Build
         run: |
           yarn build
-          touch ./out/.nojekyll
-      # 部署
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v4
-        with:
-          token: ${{ secrets.TOKEN }}
-          branch: gh-pages
-          folder: out # npm run build 生成静态资源的路径
+        # touch ./out/.nojekyll
 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./out
+
+      # 部署
+      # - name: Deploy
+      #   uses: JamesIves/github-pages-deploy-action@releases/v4
+      #   with:
+      #     token: ${{ secrets.TOKEN }}
+      #     branch: gh-pages
+      #     folder: out # npm run build 生成静态资源的路径
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
