--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next-contentlayer": "^0.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.0",
+    "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-flexible-code-titles": "^1.2.0",
     "remark-gfm": "^3.0.0",
