--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "github-slugger": "^2.0.0",
     "next": "13.4.7",
     "next-contentlayer": "^0.3.3",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.3",
